	* Stubs for several event NPCs.
	* Added Florina Beach NPC.
	* Added NimaKIN and KIN NPCs.
	* Fixed any possibility of client crash when choosing new eyes or hair.

2012-09-17  GoldenKevin  (revision 138)

	* Added remaining Nautilus Harbor NPCs to complete Victoria Island NPC
	scripts.

2012-09-18  GoldenKevin  (revision 139)

	* Updated some NPC scripts after consulting DelphiMS scripts.
	* Updated several scripts so they are based on the more accurate Vana
	scripts rather than those from KiniroMS.
	* Updated some scripts that multiple NPCs share.
	* Added a missing Maple Island script. Peter (NPC 2002) is also in the WZ
	files, but v0.62 doesn't have Mushroom Town so I didn't include him.
	* Vana consulted scripts have their documentation changed to read r3171
	instead of r2111 if applicable (cny no longer exist in r3171, so it is left
	as r2111).

2012-09-18  GoldenKevin  (revision 140)

	* Fixed begin_jp1.js.
	* Script formatting changes I missed last revision.

2012-09-19  GoldenKevin  (revision 141)

	* Revisited ScheduledHashedWheelExecutor. Rewrote all thread-unsafe code,
	corrected the broken invokeAll and invokeAny methods, and cleaned up.

2012-09-20  GoldenKevin  (revision 142)

	* ScheduledHashedWheelExecutor now will never misplace a task into the wrong
	bucket. It required moving three division operations, a (fairly predictable)
	branch, and a few instances of addition/subtraction and casting into a mutex
	block shared with the worker thread, but avoiding reschedules should offset
	any performance losses.

2012-09-22  GoldenKevin  (revision 143)

	* Support for scrolling messages in game server.
	* Added !heal command.
	* Fixed some misuse of Player.getMaxHp(), GameCharacter.getCurrentMaxHp(),
	Player.getMaxMp(), and GameCharacter.getCurrentMaxHp().

Copyright 2011-2012 GoldenKevin
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.