@@ -31,4 +31,4 @@
  * @author GoldenKevin
  */
 
-//TODO: get GMS like conversation
+//TODO: GMS-like conversation
