@@ -28,4 +28,4 @@
  * @author GoldenKevin
  */
 
-//TODO: get GMS like conversation
+//TODO: GMS-like conversation
