@@ -17,12 +17,13 @@
  */
 
 /**
- * Chef (NPC 1002006)
- * Victoria Road: Lith Harbor (Map 104000000)
+ * Maple Claws: Furrious Santa - Maplemas (NPC 9201030)
+ * Hidden Street: Happyville (Map 209000000)
  *
- * Unknown purpose.
+ * <insert description here>
  *
- * @author GoldenKevin
+ * @author GoldenKevin (content from Vana r3171)
  */
 
 //TODO: GMS-like conversation
+npc.sayNext("Christmas is over.");
