@@ -1,0 +1,31 @@
+/*
+ * ArgonMS MapleStory server emulator written in Java
+ * Copyright (C) 2011-2012  GoldenKevin
+ *
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU Affero General Public License as
+ * published by the Free Software Foundation, either version 3 of the
+ * License, or (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Affero General Public License for more details.
+ *
+ * You should have received a copy of the GNU Affero General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ */
+
+/**
+ * Cliff (NPC 2001000)
+ * Hidden Street: Happyville (Map 209000000)
+ *
+ * Gives tips to players who want to decorate the Christmas tree in Happyville.
+ *
+ * @author GoldenKevin (content from Vana r3171)
+ */
+
+npc.sayNext("Do you see the group of snowman standing over there? Go talk to one of them, and it'll take you to the famous christmas tree--it's just humongous! While there, you can decorate the tree using various kinds of ornaments. What do you think? Sounds fun, right?");
+npc.sayNext("Only 6 can be in the map at one time, and you can't #btrade or open a store#k there. Also, only you can pick up the ornaments that you have dropped, so don't worry about losing your ornaments here.");
+npc.sayNext("Of course, the items you drop in the map will never disappear. When you are ready, you can leave through the snowman that is inside. You will recover all the items that you dropped inside the map when you leave, so don't worry about picking up all your items. Isn't that sweet?");
+npc.say("Well then, go see #p2002001#, buy some christmas ornaments there, and then decorate the tree with those~ Oh yeah! The biggest and most beautiful ornament can't be bought from him. It's probably been... taken by a monster! Dum dum dum~");
