@@ -25,4 +25,5 @@
  * @author GoldenKevin (content from Vana r3171)
  */
 
+//TODO: real event stuff?
 npc.sayNext("Sup. Easter is over, but I still don't like it one bit, and now the people are aware of my plans. That's alright, though; my gang will do our best to bring it down next year, too. I'll be counting on you to help us take away more Easter Eggs from others. Peace..");
