@@ -17,10 +17,11 @@
  */
 
 /**
- * Chef (NPC 1002006)
- * Victoria Road: Lith Harbor (Map 104000000)
+ * Roodolph: Reindeer (NPC 9220005)
+ * Hidden Street: Happyville (Map 209000000),
+ *   Hidden Street: Extra Frosty Snow Zone (Map 209080000)
  *
- * Unknown purpose.
+ * <insert description here>
  *
  * @author GoldenKevin
  */
